--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "connect-livereload": "^0.6.0",
     "express": "^4.16.2",
     "express-static": "^1.2.5",
-    "open": "^0.0.5"
+    "iview": "^2.7.4",
+    "jquery": "1.12.4",
+    "json5": "^0.5.1",
+    "open": "^0.0.5",
+    "vue": "^2.5.9"
   }
 }
